tier5.css
/* ... */
.bradTd{
  background-color: rgb(99, 100, 94)
}
/*USER FLOW*/
.userFlowTitle{
  font-size: 24px;
  text-align: left;
  margin-left: 20%;
}
.userBracket{
  margin:3%;
  width:350px;
  margin-left: 9%;
}

.userFlow{
  text-align: center;
}

.userFlowImg{
  width:70%;
  margin-top: -5%;
}

/*SYNTHESIS: REDEFINE PROBLEM*/
.problem{
  text-align: center;
}

.problemTitle{
  font-size: 24px;
  font-weight: bold;
}

.alignGoalsTitle{
  font-size: 24px;
  text-align: center;
  font-weight: bold;
  margin-top: 5%;
  margin-bottom: 3%;
}
.alignCircles{
  text-align: center;
}

.venn{
  width: 60%;
}

/*SYNTHESIS: TWO EXPERIENCES*/

.experiences{
  text-align: center;
}
.realTimeAndNur{
  display: inline;
}

.pillar{
  display: inline-block;
  height:200px
}

/*SYNTHESIS: INITIAL CONCEPTS*/
.experienceTitle{
  font-size: 24px;
  font-weight: bold;
  text-align: left;
}

.experienceText{
  text-align: left;
  display: inline-block;
  vertical-align: top;
}
.nurtureValign{
  text-align: left;
}

@media (max-width: 992px){
  .nurtureValign{
    margin-top: 3%;
  }
}
@media  (min-width: 920px) and (max-width: 1199px){
  .realTime{
    /*margin-left: 1%;*/
  }
}

.experienceSentence{
  width: 300px
}

/*DESIGN: VIDEO*/

.videoDiv{
text-align: center;
}

.iframe{
  display:inline-block;
  margin-right: 7%;
  margin-bottom: 3%;
}

.videoText{
  display:inline-block;
  width:300px;
  vertical-align: top;
  text-align: left;
}

/*DESIGN:INITAL FEATURES*/
.subTitle{
  font-size: 24px;
  font-weight: bold;
  text-align: center;
}
.realTimeAndNur2{
  display:inline-block;
  text-align: center;
}

.featureMargins{
  margin-top:3%;
  margin-bottom:3%;
}

.features{
  text-align: center;
}

.featureIcon{
  width: 25px;
  display: inline-block;
  margin-right: 1%;
}

.flagIcon{
  width:15px;
}

.experienceSentence2{
  display: inline-block;
  text-align: left;
}

.iconSentence{
  text-align: left;
}

/*User Testing*/

.testingCircleSec{
  text-align: center;
}

.testingCircles{
  width:100px;
  height:100px;
  border-radius:50%;
  display: inline-block;
}

.userTestingRounds{
  color:rgb(74, 74, 74);
  font-size: 24px;
  /*margin-bottom: -50px;*/
  /*z-index: 2;*/
}

/*.userTestingRounds, .circle1, .circle2, .circle3{
  position: absolute;
}*/

.circle1{
  background-color: rgb(01,161,167);
  margin-right:-20px;
}

.circle2{
  background-color: rgb(221,98,92);
    margin-right:-20px;
}

.circle3{
  background-color: rgb(74, 74, 74);
}

.prototypes{
  text-align: center;
}

.prototypeImg{
  width:250px;
  /*width:200px;*/
}

.prototypeImgDiv{
  display:inline-block;
  /*border:2px solid rgb(221,98,92);*/
  border:1px solid rgb(74, 74, 74);
  width:255px;
  /*width:205px;*/
  height:275px;
  /*height:220px;*/
  vertical-align: top;
  margin:15px;
}

/*PAPER PROTOTYPES*/
.paperPrototypes{
  text-align: center;
}

.paperProtoDiv{
  font-size: 18px;
  display: inline-block;
  margin: 2%;
}

.paperProtoImg{
  width:300px;
  height:400px;
}

.top3Bottom3{
  display:block;
  text-align: center;
}

.feedbackParent{
display: inline-block;
margin:2%;
}

.testingFeedback{
  width: 200px;
  height: 120px;
  padding:5%;
  color: white;
}

.experienceBox{
  text-align: center;
}

.feedbackP{
  display:inline-block;
  color:rgb(74,74,74);
  width:200px;
  /*height:250px;*/
  vertical-align: top;
}
.feedbackParentGreen{
  background-color: rgb(01, 161, 167);
  color: white;
}

.feedbackParentOrange{
  background-color: rgb(221,98,92);
  color: white;
}

.feedbackParentCharcol{
 background-color: rgb(74,74,74);
 color: white;
}

.feedbackParentLightGreen{
  background-color: rgb(212,245,242);
  color: rgb(74,74,74);
}
.feedbackParentLightOrange{
  background-color: rgb(249,216,212);
  color: rgb(74,74,74);
}

/*DESIGN:
Usability testing findings*/
.findings2PParent{
  text-align: center;
}

.findings2P{
  display: inline-block;
  text-align: left;
  width:450px;
  vertical-align: top;
  padding: 2%;
}

/*DESIGN:
DESIGN DECISIONS*/

.designDecisions{
  text-align: center;
}

/*.decNumber{
  position:absolute;
  width:100%;
  font-size: 24px;
  top:0;
  padding-top: 12%;
  padding-left:5px;
}*/

.decCircle{
  width:50px;
  height:50px;
  border-radius:50%;
  background-color: rgb(01, 161,167);
  color:white;
  position:relative;
  vertical-align: top;
  margin-right: 2%;
  /*margin-bottom: 45px;*/
  display: inline-block;
  font-size:
}

/*.decNumbers{
  display: inline-block;
  vertical-align: top;
  margin-right:5px;
}*/

/*.decCircle1{
  margin-top: -7px;
}
.decCircle2{
  margin-top: 150px;
}
.decCircle3{
  margin-top: 200px;
}*/

/*.decSections{

}*/

.decText{
text-align: left;
width:650px;
display: inline-block;
}

.decPoints{
font-size: 24px;
font-weight: bold;
}

/*BUILD AND DELIVER:
Before and After*/

.buildText{
  width:90%;
  margin:0 auto;
}

.comparisons{
  text-align: center;
}

.comparisonTitle{
  text-align: center;
  font-size: 24px;
  margin-left: 5%;
}

.formerFilter{
  margin-left:33%;
}

.filter{
margin-left: 27%;
}

.comparisonTitle2{
  margin-left:10%;
}

.listView{
    display: inline-block;
    vertical-align: top;
    padding:2%;
}

.listViewImg{
  width:500px;
}

/*BUILD: Prototype*/
.prototypeLink{
  text-decoration: underline;
  text-align: center;
  font-size: 24px;
}

/*BUILD: logo redesign*/

.logoSecParent, .logoSec{
  text-align: center;
}

.logoWithText{
  display: inline-block;
  padding: 5%;
  vertical-align: bottom;
}

.logoTitle{
  font-weight: bold;
  font-size: 24px;

}

.octoLogo{
  width:200px;
}
.octoLogoNew{
  width:232px;
}
.octoLogoNew2{
  width:250px;
}
/*NEXT STEPS*/
.arrowContainer{
  text-align: center;
}

.nextStepsArrow{
  width:90%;
}

.stepsParent{
  text-align: center;
}

.stepsSec{
  display: inline-block;
  text-align: center;
}

.recTop{
  width:300px;
  height:50px;
  background-color: rgb(241, 238, 238);
  vertical-align: middle;
}
/* ... */

